# neurophase

./: .gitignore  .pre-commit-config.yaml  ABLATION_POLICY.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAIMS.yaml  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE_CHECKLIST.yaml  INVARIANTS.yaml  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES_v1.2-rc1.md  SECURITY.md  STATE_MACHINE.yaml  execution_gate.py  mechanical_governance_audit_2026-04-20.yaml  mechanical_governance_source_checklist_2026-04-20.yaml  omega_governance_kernel.py  openai_gpt_2026_audit_2026-04-19.md  owner_manifest.yaml  plv.py  pyproject.toml  test_core.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  release_blocker.yml  research_question.yml
.github/workflows/: actionlint.yml  ci.yml  codeql.yml  dependency-review.yml  scorecard.yml  security.yml
artifacts/live_runs/: README.md
audit/: kernelization_audit.md
benchmarks/decision_quality/: PROTOCOL.md
data/: calibration_dataset.json
data/market/: README.md  btc_1m_sample.csv
data/sensors/: sample_recording.jsonl
docs/: ARCHITECTURE_ONE_PAGE.md  BRIDGE_CONTRACTS.md  CLOSURE_PATH.md  CNS_PROTOCOL.md  EEG_UTILITY_NEXT.md  EVOLUTION_BOARD.md  GATE_FIRST_EXECUTION.md  LIVE_SESSION_PROTOCOL.md  OBSERVATORY_EXPORT.md  OPS_METRICS.md  PR62_HARDENING_PLAN.md  PUBLIC_API.md  REPO_AUDIT.md  RUNTIME_CANONICAL_FRAME.md  RUNTIME_RESEARCH_SEPARATION.md  STABLE_PROMOTION.md  SYSTEM_PROMPT_NEUROPHASE.md  TASK_MAP.md  audit_evidence_labels.py  evidence_enforcer.py  final_diff_validation.py  pi_self_heal_hooks.py  science_basis.md  singularity_manifest.md  validate_bibliography_dois.py
docs/diagrams/: gate_state_machine.md
docs/maintenance/: 2026_q2_calibration.md
docs/monograph/: INVARIANTS_MONOGRAPH.md
docs/oracle/: __init__.py  evidence_oracle.py  predictive_docs_dynamics.py
docs/outreach/: toma_miyakoshi_email.md
docs/theory/: hierarchical_status_bibliography.md  invariant_matrix.md  klr_reset_contract.md  neurophase_elite_bibliography.md  neurophase_scientific_basis.md  scientific_basis.md  sensory_basis.md  stillness_invariant.md  time_integrity.md
docs/validation/: FINALIZATION_MERGE_PROTOCOL.md  FINAL_PRODUCTION_SIGNOFF_2026-04-11.md  FINAL_PRODUCTION_SIGN_OFF.md  MERGE_SIGN_OFF_TEMPLATE.txt  NEUROPHASE_BIBLIOGRAPHY_INTEGRATION_SUMMARY.md  evidence_labeling_style_guide.md  integration_readiness_protocol.md
examples/: stillness_demo.py
examples/data/: physio_replay_sample.csv
neurophase/: __init__.py  __main__.py  api.py  explain.py
neurophase/agents/: __init__.py  pi_agent.py  pi_core.py
neurophase/analysis/: __init__.py  prediction_error.py  regime.py  regime_transitions.py
neurophase/audit/: __init__.py  decision_ledger.py  replay.py  session_manifest.py
neurophase/benchmarks/: __init__.py  neural_phase_generator.py  parameter_sweep.py  phase_coupling.py  ppc_analytical.py  stochastic_market_sim.py
neurophase/bridges/: __init__.py  clock_sync.py  downstream_execution.py  errors.py  frame_mux.py  ingress.py
neurophase/calibration/: __init__.py  singularity_attractor.py  stillness.py  threshold.py
neurophase/contracts/: __init__.py  frame.py
neurophase/core/: __init__.py  kuramoto.py  order_parameter.py  phase.py
neurophase/data/: __init__.py  ds003458_loader.py  eeg_preprocessor.py  stream_detector.py  temporal_validator.py
neurophase/experiments/: __init__.py  ds003458_adaptation_regression.py  ds003458_analysis.py  ds003458_csd_analysis.py  ds003458_delta_analysis.py  ds003458_delta_q.py  ds003458_rpe_analysis.py  ds003458_scp_analysis.py  ds003458_trial_lme.py  plv_market_methodology.py  synthetic_plv_validation.py
neurophase/gate/: __init__.py  direction_index.py  emergent_phase.py  execution_gate.py  stillness_detector.py
neurophase/governance/: __init__.py  ablation.py  checklist.py  claims.py  completeness.py  doctor.py  invariants.py  monograph.py  owner_manifest.py  reproducibility.py  resistance.py  state_machine.py
neurophase/indicators/: __init__.py  fmn.py  qilm.py
neurophase/intel/: __init__.py  btc_field_order.py
neurophase/kernel/: __init__.py  omega_invariants.py
neurophase/metrics/: __init__.py  asymmetry.py  branching_ratio.py  delta_power.py  delta_price_xcorr.py  effect_size.py  entropy.py  hurst.py  iplv.py  ism.py  plv.py  plv_verdict.py  rayleigh.py  ricci.py  scp.py  transfer_entropy.py  trial_theta_lme.py
profiles/: README.md
results/: ds003458_adaptation_regression_20260413.json  ds003458_csd_20260413.json  ds003458_delta_q_20260413.json  ds003458_delta_xcorr_20260412.json  ds003458_preregistration.md  ds003458_rpe_20260413.json  ds003458_scp_xcorr_20260412.json  ds003458_trial_lme_20260412.json  ds003458_verdict_20260412.json  plv_market_methodology_20260413.json  synthetic_plv_sweep_20260412.json
scripts/: build_hero_animation.py  ops_metrics.py  run_layer_d_acceptance.sh
tests/: README.md  test_acceptance_chain.py  test_action_policy.py  test_adaptive_threshold.py  test_aesthetics_contract.py  test_api_and_cli.py  test_asymmetry.py  test_batch_pipeline.py  test_benchmarks_phase_coupling.py  test_bibliography_contract.py  test_branching_ratio.py  test_branching_ratio_properties.py  test_bridge_layer.py  test_btc_field_order.py  test_calibration_stillness.py  test_calibration_threshold.py  test_calibrator.py  test_canonical_frame.py  test_claim_registry.py  test_closure_path.py  test_coupled_brain_market.py  test_coupling_direction.py  test_coupling_observer.py  test_decision_ledger.py  test_delta_power.py  test_delta_price_xcorr.py  test_determinism_certification.py  test_determinism_lock.py  test_direction_index.py  test_ds003458.py  test_dual_surrogate.py  test_effect_size.py  test_eighth_axis_doctor.py  test_emergent_phase.py  test_ensemble_consensus.py  test_entropy.py  test_epsilon_derivation.py  test_evt.py  test_execution_gate.py  test_executive_monitor.py  (+96 more)
tools/: README.md  calibrate_physio.py  check_contract.py  fault_producer.py  polar_producer.py  requirements.txt
(+67 files in other folders)
