[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurophase"
version = "0.4.0"
description = "Phase synchronization as execution gate — Kuramoto model of market × trader nervous system"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yaroslav Vasylenko" }]
requires-python = ">=3.11"
# Runtime-kernel dependencies. These are the only modules that ``import
# neurophase`` and ``import neurophase.api`` touch at load time
# (enforced by tests/test_import_surface.py). The research stack — mne,
# pandas, neurodsp, PyWavelets, scikit-learn, networkx — is an optional
# extra (see ``[project.optional-dependencies].research``) and is
# imported locally by the modules that need it.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Research / analysis extras. Required by ``neurophase.experiments``,
# ``neurophase.data.ds003458_loader``, ``neurophase.data.eeg_preprocessor``,
# ``neurophase.calibration``, parts of ``neurophase.metrics`` (Ricci,
# δ-power, SCP, iPLV, trial_theta_lme), ``neurophase.risk``,
# ``neurophase.benchmarks``, and ``neurophase.sync`` simulators.
# Installing ``neurophase[research]`` pulls the full scientific stack.
research = [
    "pandas>=2.0",
    "mne>=1.6",
    "neurodsp>=2.2",
    "PyWavelets>=1.4",
    "scikit-learn>=1.3",
    "networkx>=3.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "hypothesis>=6.100",
    # Dev installs always include the research extras so the full
    # test suite (ds003458, Ricci, calibration, …) can run.
    "pandas>=2.0",
    "mne>=1.6",
    "neurodsp>=2.2",
    "PyWavelets>=1.4",
    "scikit-learn>=1.3",
    "networkx>=3.2",
    # Live physio ingress (LSL). See neurophase.physio.live.
    "pylsl>=1.16",
]
# Minimal subset for users who only want the live physio slice without
# the full research stack.
live = [
    "pylsl>=1.16",
]
# Optional external γ-verification witness.
# Pulls the single-file ``neosynaptex`` integrating mirror directly from
# its canonical repository. When absent, ``GammaWitness`` degrades to a
# no-op and every ``KLRFrame.witness_report`` is ``None`` — all core
# invariants (I₁–I₄, KLR-I₁–I₄, NEO-I₁–I₂) continue to hold.
witness = [
    "neosynaptex @ git+https://github.com/neuron7xLab/neosynaptex.git@main",
]

[tool.setuptools.packages.find]
include = ["neurophase*"]

[tool.setuptools.package-data]
neurophase = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# N802/N803/N806/N815: allow mixedCase scientific names (R_min, dH_max, kappa_ok).
# RUF002/RUF003: physics Unicode in docstrings/comments is intentional (θ, ψ, Σ, π).
ignore = ["E501", "N802", "N803", "N806", "N815", "RUF002", "RUF003", "UP017"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["scipy.*", "pywt.*", "networkx.*", "sklearn.*", "pandas.*", "yaml.*", "neurodsp.*", "tensorpac.*", "mne.*", "pylsl.*", "bleak.*"]
ignore_missing_imports = true

# The external ``neosynaptex`` witness is an optional dependency — the
# code path is typed defensively and falls back to ``INSUFFICIENT_DATA``
# when absent. The top-level module has no submodule imports so a single
# module entry is enough.
[[tool.mypy.overrides]]
module = ["neosynaptex"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Exclude hardware + acceptance suites from the default run. They are
# opt-in via explicit ``-m hardware`` / ``-m acceptance`` or, in CI, a
# dedicated step per marker. This keeps the default gate fast and
# reproducible on machines without BLE / a fresh-clone setup.
addopts = "-v --strict-markers -m 'not hardware and not acceptance'"
markers = [
    "hardware: requires real hardware (Polar H10, BT adapter, etc.). Excluded from default run.",
    "acceptance: full fresh-clone chain acceptance tests. Slow. Excluded from default run.",
]

[tool.coverage.run]
# Coverage is measured against the kernel package only. ``tools/`` is a
# thin operator-CLI surface exercised by hardware-marked tests that do
# not run in default CI; including it would drag ``fail_under`` below
# what the default suite can truthfully defend.
source = ["neurophase"]
branch = false
parallel = false

[tool.coverage.report]
# Truthful, non-regressive floor. Cross-environment baseline measured
# on 2026-04-13 against the default suite
# (-m 'not hardware and not acceptance'):
#   local Python 3.12 / Ubuntu 24.04 : 78.89%
#   CI    Python 3.11 / ubuntu-latest : 77.98%
#   CI    Python 3.12 / ubuntu-latest : 77.98%   (matches 3.11 in CI)
# The ~0.9pp delta is systematic — Python minor-version bytecode and
# CI-resolved dep pins exercise different conditional-import paths in
# the research stack. We therefore pin ``fail_under`` to ``77`` (floor
# of the minimum across the matrix). The gate still catches major
# test-surface erosion (>1pp drop from the observed CI baseline).
# Raise only when a new higher baseline has held across ≥3
# consecutive green runs on both matrix entries.
fail_under = 77
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
